<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/side_nav_bar"
    tools:context="com.appli.ilink.AccueilFragment">
    <RelativeLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#fff"
            android:gravity="center_horizontal"
            android:id="@+id/textTitleAccueil"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="25dp"
            android:text="@string/accueil" />
        <LinearLayout
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:background="@drawable/background_layer_white"
            android:paddingLeft="10dp"
            android:paddingTop="30dp"
            android:paddingRight="10dp"
            android:paddingBottom="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:layout_below="@+id/btnHome1">
            <Button
                android:textSize="11sp"
                android:textColor="#fff"
                android:id="@+id/btnHome3"
                android:background="@drawable/first_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnHome3" />
            <Button
                android:textSize="11sp"
                android:textStyle="bold"
                android:textColor="#fff"
                android:id="@+id/btnHome6"
                android:background="@drawable/first_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:text="@string/btnHome6"
                android:layout_alignParentRight="true" />
        </LinearLayout>
        <Button
            android:textSize="11sp"
            android:textColor="#fff"
            android:id="@+id/btnHome1"
            android:background="@drawable/first_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/title_connect"
            android:layout_below="@+id/textTitleAccueil"
            android:layout_alignParentLeft="false" />
        <Button
            android:textSize="11sp"
            android:textColor="#fff"
            android:id="@+id/btnHome2"
            android:background="@drawable/first_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:text="@string/btnHome2"
            android:layout_below="@+id/textTitleAccueil"
            android:layout_alignParentRight="true" />
    </RelativeLayout>
</ScrollView>
